--- a/module/profile-overlay/profile-overlay.css
+++ b/module/profile-overlay/profile-overlay.css
@@ -36,8 +36,10 @@ module[data-module="profile-overlay"] .po-left {
 
 module[data-module="profile-overlay"] .po-banner {
   height: 120px;
+  background-color: #f3f4f6;
+  background-position: center top;
   background-size: cover;
-  background-position: center;
+  background-repeat: no-repeat;
   position: relative;
 }
 
